<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--App Related-->
    <string name="hello">Hello World, SageActivity!</string>
    <string name="app_name">Sage</string>
    <string name="app_name_long">Sage For Android</string>

    <!--Hints & Labels-->
    <string name="history">History</string>
    <string name="insert_title_hint">Cell Name</string>
    <string name="insert_desc_label">Cell Description</string>
    <string name="insert_desc_hint">Cell Description</string>
    <string name="insert_group_label">Group</string>
    <string name="insert_group_hint">Choose/Create a Group</string>
    <string name="insert_input_label">Input</string>
    <string name="insert_input_hint">Enter your calculation input.</string>
    <string name="dialog_confirm_discard">Really discard this cell?</string>

    <!--General Strings-->
    <string name="ok">OK</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>

    <!--Group Strings-->
    <string name="group_empty_text">No Cells have been saved</string>
    <string name="group_misc">Miscellaneous</string>
    <string name="group_playground">Playground</string>

    <!--Title Strings-->
    <string name="main_menu_title">Main Menu</string>
    <string name="activity_help_title">Help</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_manage_inserts_title">Manage Inserts</string>
    <string name="dialog_new_group_title">Create a new Group</string>
    <string name="dialog_edit_cell_single_title">Edit Cell</string>
    <string name="dialog_edit_cell_multiple_title">Edit Cells</string>
    <string name="dialog_new_insert_title">Create a new insert</string>
    <string name="dialog_edit_insert_title">Edit this Insert</string>
    <string name="dialog_delete_insert_title">Delete Insert(s) ?</string>
    <string name="delete_dialog_title">Delete Cell?</string>
    <string name="group_new_dialog_title">Create Group</string>
    <string name="group_edit_dialog_title">Edit Group</string>
    <string name="group_delete_title">Delete Group?</string>
    <string name="dialog_share_title">Choose an Action…</string>
    <string name="help_faq_title">FAQ</string>
    <string name="help_changelog_title">CHANGELOG</string>
    <string name="help_about_title">ABOUT</string>
    <string name="preference_dialog_title">Choose Font Size</string>
    <string name="pref_font_title">CodeView Font Size</string>

    <!--Dialog Strings-->
    <string name="dialog_new_group_text_hint">Create a Group</string>
    <string name="dialog_info_button_contentDescription">An empty group name will add the cell to the Miscellaneous
        group
    </string>
    <string name="dialog_edit_cell_multiple_group_hint">Edit Group Name(s)</string>
    <string name="dialog_new_cell_title">Create a new Cell</string>
    <string name="dialog_name_hint">Cell Name</string>
    <string name="dialog_group_hint">Choose/Create a Group</string>
    <string name="dialog_description_hint">Cell Description</string>
    <string name="dialog_insert_title">Current Inserts</string>
    <string name="dialog_manage_insert_checkbox_prompt">Set Favorite?</string>
    <string name="dialog_manage_insert_description_hint">Insert Description</string>
    <string name="dialog_manage_insert_text_hint">Insert Text</string>
    <string name="group_dialog_hint">Group Name</string>
    <string name="choose_group_text">CHOOSE A GROUP</string>

    <!--Toast Strings-->
    <string name="toast_network_error">An Internet connection is required to run!</string>
    <string name="toast_cell_saved">Input saved successfully</string>
    <string name="toast_share_unavailable">You must run a computation first!</string>
    <string name="toast_link_copied">Link copied to ClipBoard</string>
    <string name="toast_image_generating">Please Wait, Generating Image…</string>
    <string name="toast_external_storage_unmounted">External Storage is not mounted,please try again</string>
    <string name="toast_share_server_running">Please wait for the current computation to finish</string>
    <string name="toast_edit_multiple_error">You cannot edit multiple cells</string>
    <string name="toast_error_interact_timeout">Server Disconnected</string>
    <string name="toast_error_websocket_disconnected">Unable to complete computation</string>
    <string name="toast_error_timeout">Connection Timed Out</string>
    <string name="toast_playground_info">The playground allows you to quickly run and share computations</string>

    <!--Menu Strings-->
    <string name="menu_run">Run</string>
    <string name="menu_save">Save Current Input</string>
    <string name="menu_toggle_favorite">Toggle Favorite</string>
    <string name="menu_delete_selected">Delete Selected Items</string>
    <string name="menu_edit_cell">Edit this Cell</string>
    <string name="menu_edit_insert">Edit this Insert</string>
    <string name="menu_delete_insert">Delete this Insert</string>
    <string name="menu_insert_open">Open Inserts Menu</string>
    <string name="menu_view_inserts">Select an Insert</string>
    <string name="menu_add_insert">Add a new Insert</string>
    <string name="menu_manage_inserts">Manage Inserts</string>
    <string name="menu_search_inserts">Search Inserts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_group_edit">Edit this Group</string>
    <string name="menu_group_delete">Delete this group</string>
    <string name="menu_help">Help</string>
    <string name="menu_add_group_or_cell">Add Group/Cell</string>
    <string name="menu_new_group">Add New Group</string>
    <string name="menu_new_cell">Add New Cell</string>

    <!-- Do not change this, repo link, will be same in any language-->
    <string name="git_link_text"><![CDATA[<a href="https://github.com/sagemath/android">GitHub Repo</a>]]></string>

    <string name="manage_inserts_empty_text">You have no inserts saved</string>
    <string name="cell_list_empty_text">This group has no cells.</string>
    <string name="cell_group_empty_text">You have no groups.</string>

    <!--Plurals-->
    <plurals name="delete_n_inserts">
        <item quantity="one">Really delete this insert?</item>
        <item quantity="other">Really delete these %d inserts?</item>
    </plurals>
    <plurals name="delete_n_cells">
        <item quantity="one">Really delete this cell?</item>
        <item quantity="other">Really delete these %d cells?</item>
    </plurals>

    <!--Warning Strings-->
    <string name="delete_group_warning">Really delete this group and all cells associated with it ?\n\n
        <b>WARNING!</b>This cannot be undone!
    </string>
    <string name="delete_warning">
        <b>WARNING!</b>
        This cannot be undone!
    </string>

    <!--Changelog Lib Strings-->
    <string name="changelog_row_prefix_bug">[b]BugFix:[/b]</string>
    <string name="changelog_row_prefix_improvement">[b]New!:[/b]</string>

    <!--FontAwesome Strings-->
    <string name="fa_expand">&#xf065;</string>
    <string name="fa_collapse">&#xf066;</string>
    <string name="fa_star">&#xf005;</string>
    <string name="fa_star_outline">&#xf006;</string>
    <string name="fa_github">&#xf09b;</string>

    <!--Misc-->
    <string name="header_fav_text">FAVORITES</string>
    <string name="pref_font_summary">Change the font size of the code editor</string>
    <string name="cell_query_hint">Search Cells</string>
    <string name="insert_query_hint">Search Inserts</string>

</resources>
