<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_run"
          android:title="@string/menu_run"
          android:icon="@drawable/ic_action_av_play"
          app:showAsAction="always"
          android:orderInCategory="0"/>

    <item
            android:id="@+id/menu_insert"
            android:title="@string/menu_insert_open"
            android:icon="@drawable/ic_action_code"
            app:showAsAction="always"
            android:orderInCategory="1"/>

    <item android:id="@+id/menu_save"
          android:title="@string/menu_save"
          android:icon="@drawable/ic_action_content_save"
          app:showAsAction="ifRoom"
          android:orderInCategory="2"/>

    <item android:id="@+id/menu_share"
          android:title="@string/menu_share"
          android:icon="@drawable/ic_action_social_share"
          app:showAsAction="ifRoom"
          android:orderInCategory="3"/>

    <item android:id="@+id/menu_settings"
          android:title="@string/menu_settings"
          android:icon="@drawable/ic_action_action_settings"
          app:showAsAction="ifRoom"
          android:orderInCategory="4"/>

    <item android:id="@+id/menu_help"
          android:title="@string/menu_help"
          android:icon="@drawable/ic_action_action_help"
          app:showAsAction="ifRoom"
          android:orderInCategory="5"/>
</menu>