<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_toggle_fav"
          android:title="@string/menu_toggle_favorite"
          android:icon="@drawable/ic_action_rating_half_important"
          app:showAsAction="ifRoom"
          android:orderInCategory="0"/>

    <item android:id="@+id/menu_delete"
          android:title="@string/menu_delete_selected"
          android:icon="@drawable/ic_action_content_discard"
          app:showAsAction="ifRoom"
          android:orderInCategory="2"/>

    <item android:id="@+id/menu_edit"
          android:title="@string/menu_edit_cell"
          android:icon="@drawable/ic_action_content_edit"
          app:showAsAction="ifRoom"
          android:orderInCategory="1"/>
</menu>