<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_title_label" />

    <EditText
        android:id="@+id/insert_cell_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_title_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_desc_label" />

    <EditText
        android:id="@+id/insert_cell_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_desc_hint" />

</LinearLayout>