<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_weight="0"
            android:padding="10dp">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/group_playground"
                android:id="@+id/playgroundItem"
                />

        <ImageButton
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:id="@+id/playgroundInfo"
                android:src="@drawable/ic_action_help"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
            android:id="@+id/label"
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/choose_group_text"
            android:textAppearance="?android:attr/textAppearanceMedium"/>


    <ListView android:id="@id/android:list"
              android:layout_weight="1"
              android:layout_width="match_parent"
              android:layout_height="0dp"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/android:empty"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/cell_group_empty_text"
            android:visibility="gone"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

</LinearLayout>

